@@ -21,6 +21,9 @@ For building Git snapshots the following tools are needed:
 * automake
 * libselinux
 * libpthread
+* libaudit
+
+Please read README, anyways.
 
 The segatexd uses autoconf and automake for building.
 This is how I do the building right now.
@@ -30,6 +33,7 @@ $ autoconf
 $ automake --add-missing
 $ ./configure
 $ make 
+# make install
 
 Shipping the contents of .tar.gz as done by this command.
 $ make dist 
