@@ -2,7 +2,7 @@
  *  main.h - header file for main.c 
  *  This file contains the contents of segatex-ng.
  *
- *  Copyright (C) 2017 Shintaro Fujiwara
+ *  Copyright (C) 2017-2018 Shintaro Fujiwara
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Lesser General Public
