@@ -1,3 +1,5 @@
+2018-01-31 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
+    Fixed agent program get file from server /usr/share/segatexd as its own name to /tmp  
 2018-01-29 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
     Fixed agent program properly break from the loop 
 2018-01-28 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
